Fix browser scrollbar page shift, and write out resume json (for now)

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+html {
+  overflow-y: overlay;
+}
 
 header {
     line-height: 2em;
@@ -42,7 +45,7 @@ nav ul li a {
 }
 
 body {
-    max-width: 50em;
+    max-width: 45em;
     min-width: 15em;
 	margin: 0 auto;
 	font-family: 'Merriweather Sans', sans-serif;
