--- a/css/resumestyle.css
+++ b/css/resumestyle.css
@@ -19,10 +19,6 @@ a {
     text-decoration: none;
 }
 
-div.resume {
-    width: 40em;
-}
-
 ul.contact-info {
     font-size: 1em;
     font-weight: bold;
